--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "pbf-store",
-  "version": "0.1.0",
-  "private": true,
+  "name": "riddla-pbf-store",
+  "description": null,
+  "version": "0.0.18",
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.11"
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "react-redux": "5.0.6",
+    "redux": "^3.7.2",
+    "redux-pouchdb-plus": "0.8.1"
+  },
+  "devDependencies": {
+    "react-scripts": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
