--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "husky": "^0.14.3",
     "immutable": "^3.8.1",
     "lint-staged": "^4.0.3",
+    "lodash": "^4.17.4",
     "pouchdb-browser": "^6.3.4",
     "prettier": "^1.5.3",
     "react": "15.6.1",
